<?xml version="1.0"?>
<package format="2">
  <name>py3dx_gazebo</name>
  <version>0.0.0</version>
  <description>The py3dx_gazebo package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="cem@todo.todo">cem</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/py3dx_gazebo</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->



  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>amcl</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>controller_interface</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>dwa_local_planner</build_depend>
  <build_depend>gazebo_plugins</build_depend>
  <build_depend>gazebo_ros_control</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>robot_controllers</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>global_planner</build_depend>
  <build_depend>joint_state_controller</build_depend>
  <build_depend>joint_state_publisher</build_depend>
  <build_depend>joy</build_depend>
  <build_depend>joy_teleop</build_depend>
  <build_depend>move_base</build_depend>
  <build_depend>navfn</build_depend>
  <build_depend>robot_controllers_interface</build_depend>
  <build_depend>robot_controllers_msgs</build_depend>
  <build_depend>robot_pose_publisher</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>teleop_twist_joy</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>
  <build_depend>map_server</build_depend>
  <build_export_depend>amcl</build_export_depend>
  <build_export_depend>control_msgs</build_export_depend>
  <build_export_depend>controller_interface</build_export_depend>
  <build_export_depend>controller_manager</build_export_depend>
  <build_export_depend>dwa_local_planner</build_export_depend>
  <build_export_depend>gazebo_plugins</build_export_depend>
  <build_export_depend>gazebo_ros_control</build_export_depend>
  <build_export_depend>gazebo_ros</build_export_depend>
  <build_export_depend>robot_controllers</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>global_planner</build_export_depend>
  <build_export_depend>joint_state_controller</build_export_depend>
  <build_export_depend>joint_state_publisher</build_export_depend>
  <build_export_depend>joy</build_export_depend>
  <build_export_depend>joy_teleop</build_export_depend>
  <build_export_depend>move_base</build_export_depend>
  <build_export_depend>navfn</build_export_depend>
  <build_export_depend>robot_controllers_interface</build_export_depend>
  <build_export_depend>robot_controllers_msgs</build_export_depend>
  <build_export_depend>robot_pose_publisher</build_export_depend>
  <build_export_depend>robot_state_publisher</build_export_depend>
  <build_export_depend>roslaunch</build_export_depend>
  <build_export_depend>teleop_twist_joy</build_export_depend>
  <build_export_depend>urdf</build_export_depend>
  <build_export_depend>xacro</build_export_depend>
  <build_export_depend>map_server</build_export_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>controller_interface</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>dwa_local_planner</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>robot_controllers</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>global_planner</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>joy_teleop</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>navfn</exec_depend>
  <exec_depend>robot_controllers_interface</exec_depend>
  <exec_depend>robot_controllers_msgs</exec_depend>
  <exec_depend>robot_pose_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>map_server</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
